src-tauri/final_check_utf8.txt
cargo :     Checking d2r-rust v0.1.0 (F:\mycode\D2Rmutiplay\d2r-rust\src-tauri)
所在位置 行:1 字符: 1
+ cargo check > final_check.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking d2...rust\src-tauri):Strin 
   g) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0308]: mismatched types
  --> src\modules\win32_safe\process.rs:61:39
   |
61 |             if cmd_utf16.is_empty() { PWSTR::null() } else { PWSTR(cmd_utf16.as_
mut_ptr()) },
   |                                       ^^^^^^^^^^^^^ expected `Option<PWSTR>`, fo
und `PWSTR`
   |
   = note: expected enum `std::option::Option<PWSTR>`
            found struct `PWSTR`
help: try wrapping the expression in `Some`
   |
61 |             if cmd_utf16.is_empty() { Some(PWSTR::null()) } else { PWSTR(cmd_utf
16.as_mut_ptr()) },
   |                                       +++++             +

error[E0308]: mismatched types
  --> src\modules\win32_safe\process.rs:61:62
   |
61 |             if cmd_utf16.is_empty() { PWSTR::null() } else { PWSTR(cmd_utf16.as_
mut_ptr()) },
   |                                                              ^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^ expected `Option<PWSTR>`, found `PWSTR`
   |
   = note: expected enum `std::option::Option<PWSTR>`
            found struct `PWSTR`
help: try wrapping the expression in `Some`
   |
61 |             if cmd_utf16.is_empty() { PWSTR::null() } else { Some(PWSTR(cmd_utf1
6.as_mut_ptr())) },
   |                                                              +++++              
               +

error[E0599]: no function or associated item named `from_win32` found for struct `win
dows_result::error::Error` in the current scope
   --> src\modules\win32_safe\process.rs:81:45
    |
 81 |             let err = windows::core::Error::from_win32();
    |                                             ^^^^^^^^^^ function or associated i
tem not found in `windows_result::error::Error`
    |
note: if you're trying to build a new `windows_result::error::Error` consider using o
ne of the following associated functions:
      windows_result::error::Error::empty
      windows_result::error::Error::new
      windows_result::error::Error::from_hresult
      windows_result::error::Error::from_thread
   --> C:\Users\yoyos\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-re
sult-0.4.1\src\error.rs:82:5
    |
 82 |     pub const fn empty() -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 91 |     pub fn new<T: AsRef<str>>(code: HRESULT, message: T) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
110 |     pub fn from_hresult(code: HRESULT) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
118 |     pub fn from_thread() -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `new` found for struct `RefreshKin
d` in the current scope
    --> src\modules\process_killer.rs:5:22
     |
   5 |         RefreshKind::new().with_processes(ProcessRefreshKind::new()),
     |                      ^^^ function or associated item not found in `RefreshKind
`
     |
note: if you're trying to build a new `RefreshKind` consider using one of the followi
ng associated functions:
      RefreshKind::nothing
      RefreshKind::everything
    --> C:\Users\yoyos\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sysinfo-0
.37.2\src\common\system.rs:2646:5
     |
2646 |     pub fn nothing() -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
...
2661 |     pub fn everything() -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is a method `ne` with a similar name, but with different arguments
    --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234\library\core\src\cmp.rs:264:5

error[E0599]: no function or associated item named `new` found for struct `ProcessRef
reshKind` in the current scope
    --> src\modules\process_killer.rs:5:63
     |
   5 |         RefreshKind::new().with_processes(ProcessRefreshKind::new()),
     |                                                               ^^^ function or 
associated item not found in `ProcessRefreshKind`
     |
note: if you're trying to build a new `ProcessRefreshKind` consider using one of the 
following associated functions:
      ProcessRefreshKind::nothing
      ProcessRefreshKind::everything
    --> C:\Users\yoyos\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sysinfo-0
.37.2\src\common\system.rs:2410:5
     |
2410 |     pub fn nothing() -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
...
2425 |     pub fn everything() -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is a method `ne` with a similar name, but with different arguments
    --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234\library\core\src\cmp.rs:264:5

error[E0599]: no function or associated item named `new` found for struct `ProcessRef
reshKind` in the current scope
    --> src\modules\process_killer.rs:10:29
     |
  10 |         ProcessRefreshKind::new(),
     |                             ^^^ function or associated item not found in `Proc
essRefreshKind`
     |
note: if you're trying to build a new `ProcessRefreshKind` consider using one of the 
following associated functions:
      ProcessRefreshKind::nothing
      ProcessRefreshKind::everything
    --> C:\Users\yoyos\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sysinfo-0
.37.2\src\common\system.rs:2410:5
     |
2410 |     pub fn nothing() -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
...
2425 |     pub fn everything() -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is a method `ne` with a similar name, but with different arguments
    --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234\library\core\src\cmp.rs:264:5

warning: variable does not need to be mutable
   --> src\modules\win32_safe\mutex.rs:155:9
    |
155 |     let mut length: u32 = 0x2000;
    |         ----^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `d2r-rust` (lib) generated 1 warning
error: could not compile `d2r-rust` (lib) due to 6 previous errors; 1 warning emitted
